<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".student.ExamsActivity"
    tools:showIn="@layout/activity_exam_timetable"
    android:padding="5dp">


    <HorizontalScrollView
        android:id="@+id/horizontalView"
        android:layout_height="match_parent"
        android:scrollbars="horizontal|vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="5dip">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1.0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center">
                        <TextView
                            android:text="Select Week"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/textView16"
                            android:textStyle="normal|bold"
                            android:textSize="18sp"
                            android:textColor="@color/qiscus_accent"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="casual" />

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp">
                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/spinner"
                                android:layout_weight="0.2"
                                android:elevation="0dp" />
                        </android.support.v7.widget.CardView>


                    </LinearLayout>
                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_height="55dp">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:textColor="@color/tableHeader"
                                    android:background="@drawable/table_header_shape"
                                    android:text="@string/day"
                                    android:gravity="center_vertical|center_horizontal|center"
                                    android:textStyle="bold"
                                    android:minHeight="40dp"
                                    android:width="80dp"
                                    android:padding="10dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/table_header_shape"
                                    android:textColor="@color/tableHeader"
                                    android:text="@string/_8_30_11_00"
                                    android:textStyle="bold"
                                    android:minHeight="40dp"
                                    android:width="80dp"
                                    android:padding="10dp"
                                    android:textAlignment="center"
                                    android:gravity="center" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:textColor="@color/tableHeader"
                                    android:background="@drawable/table_header_shape"
                                    android:text="@string/_11_00_13_00"
                                    android:minHeight="40dp"
                                    android:width="80dp"
                                    android:textStyle="bold"
                                    android:padding="10dp"
                                    android:gravity="center" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:textColor="@color/tableHeader"
                                    android:background="@drawable/table_header_shape"
                                    android:text="@string/_14_00_16_00"
                                    android:minHeight="40dp"
                                    android:width="80dp"
                                    android:textStyle="bold"
                                    android:padding="10dp"
                                    android:gravity="center" />

                            </TableRow>
                        </TableLayout>
                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/timetable"
                            android:layout_weight="0.5"
                            android:layout_marginRight="5dp">
                            </TableLayout>
                    </LinearLayout>

            </LinearLayout>
    </HorizontalScrollView>
</android.support.v4.widget.NestedScrollView>
